# adelaide_calendar

./: .env.development  .env.production  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  index.html  next.config.mjs  package-lock.json  package.json  pyproject.toml  sonar-project.properties  tailwind.config.ts  uni_data.py  vite.config.ts
.github/workflows/: ci.yaml  pages.yaml
app/: layout.tsx  main.tsx  navigation_menu.tsx  page.tsx
app/Contexts/: CacheContext.js  CourseContext.js  EventContext.js
app/auth/: page.tsx
app/components/: AdvancedSearchDialog.jsx  AdvancedSearchForm.tsx  Calendar.jsx  ClassGroup.jsx  ClassItem.jsx  CourseCard.jsx  CourseDropdown.jsx  CourseSelectionPanel.jsx  HelpTooltip.jsx  SearchBox.jsx
app/routes/: dropDownStyle.css  error.tsx  index.tsx  navigationMenu.tsx  navigation_menu.tsx  root.tsx
app/routes/auth/: form.tsx  index.tsx  page.tsx  profileStyle.css  repository.ts  service.ts  signup.tsx  style.css
app/routes/components/: avatar.tsx
app/routes/course/: index.tsx
app/routes/degree/: index.tsx
app/routes/me/: index.tsx  page.tsx  service.ts
app/routes/schedule/: index.tsx  page.jsx  page.tsx
app/routes/test/: index.tsx  page.tsx
app/service/: index.ts  schema.d.ts
app/ui/: advanced-search-dialog.tsx  advanced-search-form.tsx  searchbox.tsx
src/: app.py
src/asgi/: app.py  plugins.py
src/config/: __init__.py  app.py  base.py  constants.py
src/controller/proxy/: helpers.py  router.py  schema.py  services.py  urls.py
src/controller/user/: dependencies.py  guards.py  repositories.py  router.py  schema.py  services.py  urls.py
src/db/: db_services.py  engine.py
src/db/models/: classinfo.py  course.py  group.py  meeting.py  oauth2_token.py  user.py
src/query/: dto.py  helpers.py  query.py
src/utils/: crypt.py  db_utils.py  dependencies.py  exceptions.py  schema.py
